# WeatherDownload

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.tmp/: stations.csv
.verify-venv/: pyvenv.cfg
apps/: streamlit_app.py
docs/: canonical_elements.md  changelog.md  download_fao.md  examples.md  maintainer_notes.md  output_schema.md  providers.md  providers_at_geosphere.md  providers_be_rmi.md  providers_ca_noaa_ghcnd.md  providers_ch_meteoswiss.md  providers_dk_dmi.md  providers_fr_es_au_open_water_evaporation_audit.md  providers_ghcnd_direct_prefix_wrappers.md  providers_hu_hungaromet.md  providers_mx_noaa_ghcnd.md  providers_nl_knmi.md  providers_pl_imgw.md  providers_se_smhi.md  providers_sk_experimental.md  providers_sk_historical_investigation.md  providers_us_noaa_ghcnd.md  supported_capabilities.md  tutorial.cs.md  tutorial.en.md
examples/: download_daily.py  download_fao.py  download_hourly.py  download_tenmin.py  inspect_file.py  inspect_parquet.py  probe_shmu_sk.py  read_metadata.py  station_availability.py
tests/: test_availability.py  test_be_cli.py  test_be_hourly_cli.py  test_be_parser.py  test_be_provider.py  test_ca_ghcnd_provider.py  test_ch_provider.py  test_chmi_metadata.py  test_cli.py  test_cz_ghcnd_provider.py  test_daily_observations.py  test_direct_prefix_ghcnd_provider.py  test_dk_hourly_cli.py  test_dk_parser.py  test_dk_provider.py  test_dk_tenmin_cli.py  test_download_daily_example.py  test_download_fao_example.py  test_download_hourly_example.py  test_download_tenmin_example.py  test_dwd_daily.py  test_dwd_subdaily.py  test_exporters.py  test_find_cz_fao_plus_evaporation.py  test_fr_meteo_france_provider.py  test_geosphere_cli.py  test_geosphere_parser.py  test_geosphere_provider.py  test_gui_services.py  test_hourly_observations.py  test_hu_provider.py  test_integration_daily_workflow.py  test_knmi_parser.py  test_knmi_provider.py  test_knmi_public_contract.py  test_knmi_tenmin_public_contract.py  test_mapped_prefix_ghcnd_provider.py  test_mx_ghcnd_provider.py  test_pl_provider.py  test_probe_shmu_sk_example.py  (+12 more)
utils/: find_cz_fao_plus_evaporation.py  inspect_file.py
weatherdownload/: __init__.py  availability.py  be_daily.py  be_hourly.py  be_metadata.py  be_parser.py  be_registry.py  be_tenmin.py  ch_daily.py  ch_hourly.py  ch_metadata.py  ch_parser.py  ch_registry.py  ch_tenmin.py  chmi_daily.py  chmi_hourly.py  chmi_registry.py  chmi_tenmin.py  cli.py  discovery.py  dk_daily.py  dk_hourly.py  dk_metadata.py  dk_parser.py  dk_registry.py  dk_tenmin.py  dwd_daily.py  dwd_metadata.py  dwd_registry.py  dwd_subdaily.py  elements.py  errors.py  exporting.py  fao.py  (+37 more)
(+281 files in other folders)
