[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherdownload"
version = "0.1.0"
description = "Python library for CHMI weather metadata and observation workflows."
readme = "README.md"
authors = [
    { name = "Lukáš Pospíšil" }
]
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
mat = ["scipy>=1.11.0"]
parquet = ["pyarrow>=15.0.0"]
full = [
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
    "scipy>=1.11.0",
]

[project.scripts]
weatherdownload = "weatherdownload.cli:main"

[project.urls]
Homepage = "https://github.com/lukaspospisil/WeatherDownload"
Repository = "https://github.com/lukaspospisil/WeatherDownload"

[tool.setuptools.packages.find]
include = ["weatherdownload*"]